Fix large spacing between lines on publications pages

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -12,10 +12,6 @@ p, h1, h2, h3, h4, h5, h6, em, div, span, strong {
   color: var(--global-text-color);
 }
 
-article div {
-  margin-bottom: 1rem;
-}
-
 a, table.table a {
   color: var(--global-theme-color);
   &:hover {
@@ -289,6 +285,7 @@ footer.sticky-bottom {
       }
     }
     &.active .page-link {
+      color: $white-color;
       background-color: var(--global-theme-color);
       &:hover {
         background-color: var(--global-theme-color);
@@ -351,13 +348,14 @@ footer.sticky-bottom {
       }
     }
   }
-  .card { 
-    img {
-      width: 100%;
-    }
-    .card-title {
-      color: $black-color;
-    }
+  
+  h2.category {
+    color: $grey-color-light;
+    border-bottom: 1px solid $grey-color-light;
+    padding-top: 0.5rem;
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+    text-align: right;
   }
 }
 
